--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FindYourPrecious.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 
@@ -18,8 +20,7 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse float" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link bg-light text-secondary" href="#">Fellows<span
@@ -46,20 +47,20 @@
     <div id="carouselExampleControls" class="carousel slide offset-2 col-8 p-0" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="http://lorempixel.com/1080/200/" class="d-block w-100" alt="...">
+                <img src="http://lorempixel.com/1080/200/" class="d-flex flex-wrap w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="http://lorempixel.com/1080/200/" class="d-block w-100" alt="...">
+                <img src="http://lorempixel.com/1080/200/" class="d-flex flex-wrap w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="http://lorempixel.com/1080/200/" class="d-block w-100" alt="...">
+                <img src="http://lorempixel.com/1080/200/" class="d-flex flex-wrap w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-none d-md-flex flex-wrap">
             <h5>Dangerous fellowship try to destroy the ring</h5>
             <p>Orcs, Goblins, Balrogs, protect your master Sauron !</p>
         </div>
@@ -70,9 +71,7 @@
     </div>
     <div class="container offset-2 mt-3 col-8">
         <div class="row offset-2 p-0 mx-auto">
-            <p>
-                <h3>Fellows wanted dead </h3>(or alive if you want to eat them later)
-            </p>
+            <p><h3>Fellows wanted dead </h3>(or alive if you want to eat them later)</p>
         </div>
         <div class="row nav-pills flex-column flex-sm-row offset-2">
             <span class="badge badge-pill badge-secondary active">Most wanted</span>
@@ -82,7 +81,7 @@
     </div>
     <div class="card-group offset-2 col-8 p-0 mt-3">
         <div class="card mr-3">
-            <a class="opacity" href="#" >
+            <a class="opacity" href="#">
                 <img src="http://lorempixel.com/600/600/" class="card-img-top" alt="...">
             </a>
             <p class="pop">Reward 1000 coins</p>
@@ -92,7 +91,7 @@
             </div>
         </div>
         <div class="card mr-3 ml-3">
-            <a class="opacity" href="#" >
+            <a class="opacity" href="#">
                 <img src="http://lorempixel.com/600/600/" class="card-img-top" alt="...">
             </a>
             <h5 class="pop">DEAD</h5>
@@ -102,7 +101,7 @@
             </div>
         </div>
         <div class="card ml-3">
-            <a class="opacity" href="#" >
+            <a class="opacity" href="#">
                 <img src="http://lorempixel.com/600/600/" class="card-img-top" alt="...">
             </a>
             <p class="pop">Reward 1000 coins</p>
@@ -115,10 +114,10 @@
     <div class="container">
         <div class="barre"></div>
     </div>
-    <div class="container offset-2 col-8 p-0 mt-3">
+    <div class="container offset-2 col-8 p-0 mt-3 ">
         <h3>I have captured one of them, how to get my reward ?</h3>
         <div class="media">
-            <div class="media-body">
+            <div class="media-body float-sm-none">
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
                 odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
                 fringilla. Donec lacinia congue felis in faucibus.
@@ -130,29 +129,33 @@
     <div class="container">
         <div class="barre"></div>
     </div>
-    <div class="container offset-2 col-8 mt-3">
-        <div class="row">
-            <h3 class="mb-3">Best Hunters</h3>
-        </div>
-        <div class="row">
-            <div class="media col-3">
-                <img src="http://lorempixel.com/70/70/" class="mr-3" alt="...">
-                <div class="media-body">
-                    <h5>ElvesKiller22</h5>
-                    <h6>2 captures - <a href="#">Profile</a></h6>
-                    <span>Like 68K</span>
+    <section>
+        <h2 class="col offset-2">Best hunters</h2>
+        <div class="row offset-3">
+            <div class="media">
+                <a href="#">
+                    <img src="http://lorempixel.com/70/70/">
+                </a>
+                <div class="media-body ml-1">
+                    <h5 class="mt-2">Elveskiller22</h5>
+                    2captures
+                    <a href="#">Profile</a>
+                    <a href="#">like 68k</a>
                 </div>
             </div>
-            <div class="media col-3 offset-2">
-                <img src="http://lorempixel.com/70/70/" class="mr-3" alt="...">
-                <div class="media-body">
-                    <h5>Goblin45</h5>
-                    <h6>1 capture - <a href="#">Profile</a></h6>
-                    <span>Like 68K</span>
+            <div class="media mt-2">
+                <a href="#">
+                    <img src="http://lorempixel.com/70/70/">
+                </a>
+                <div class="media-body ml-1">
+                    <h5 class="mt-2">Goblin45</h5>
+                    2captures
+                    <a href="#">Profile</a>
+                    <a href="#">like 68k</a>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <div class="container">
         <div class="barre"></div>
     </div>
@@ -164,7 +167,7 @@
             </div>
             <div class="card-body">
                 <p>What can our master Sauron do with the ring ?</p>
-                <table class="table table-striped table-bordered">
+                <table class="table table-striped table-bordered table-responsive-sm">
                     <thead>
                         <tr>
                             <th class="table-dark">Feature</th>
@@ -211,12 +214,14 @@
         <div class="media">
             <img src="http://lorempixel.com/140/140/" class="mr-4" alt="...">
             <div class="media-body ml-">
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                purus
                 odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
                 fringilla. Donec lacinia congue felis in faucibus.
             </div>
         </div>
-        <button type="button" class="btn btn-outline-dark col-lg-3 offset-4">more info on SauronRulesThemAll.com</button>
+        <button type="button" class="btn btn-outline-dark col-lg-3 offset-4">more info on
+            SauronRulesThemAll.com</button>
     </div>
     <div class="container">
         <div class="barre"></div>
@@ -228,7 +233,7 @@
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="@">
             </div>
             <div class="form-group">
-                <input type="adress" class="form-control" id="exampleFormControlInput2" placeholder="">
+                <input type="address" class="form-control" id="exampleFormControlInput2" placeholder="">
             </div>
             <div class="form-group">
                 <select class="form-control" id="exampleFormControlSelect1">
@@ -240,7 +245,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your message"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="Your message"></textarea>
             </div>
         </form>
     </div>
